--- a/login.html
+++ b/login.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyApp</title>
+    <title></title>
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
-   <h4>New App!</h4>
-   <p>Testing git</p>
-   <p>Login Form</p>
-    <script src="app.js"></script>
+   <h1>LOGIN</h1>
+    <script src=""></script>
 </body>
 </html>
