--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <h4>New App!</h4>
    <p>Testing git</p>
    <p>Login Form</p>
+   <p>Test</p>
     <script src="app.js"></script>
 </body>
 </html>
